--- a/sass/style.scss
+++ b/sass/style.scss
@@ -64,7 +64,7 @@ article,footer{
     }
     h2{
         margin-bottom: 40px;
-        font-weight: 400 Normal
+        font-weight: 400
     }
     p{
       line-height: 1.5;
