--- a/sass/style.scss
+++ b/sass/style.scss
@@ -63,6 +63,7 @@ article,footer{
         border-bottom: 1px solid #DDD;
     }
     h2{
+        color:#333;
         margin-bottom: 40px;
         font-weight: 400
     }
