--- a/sass/style.scss
+++ b/sass/style.scss
@@ -96,6 +96,9 @@ article{
         padding: 60px 80px;
         border-top: 1px solid #DDD;
         border-bottom: 1px solid #DDD;
+        p{
+            margin-bottom: 0px;
+        }
     }
     &#product{
         margin-top: 80px;
