--- a/sass/style.scss
+++ b/sass/style.scss
@@ -96,6 +96,7 @@ article{
         padding: 60px 80px;
         border-top: 1px solid #DDD;
         border-bottom: 1px solid #DDD;
+        text-align: center;
         p{
             margin-bottom: 0px;
         }
