--- a/sass/style.scss
+++ b/sass/style.scss
@@ -53,6 +53,7 @@ header{
         }
     }
 }
+
 #dswd2{
     header{
         background-image: url(/images/dswd2/head.jpg);
@@ -114,13 +115,15 @@ article{
             }
         }
     }
+
     h2{
         color:#333;
         margin-bottom: 40px;
         font-weight: 400
     }
+
     p{
-        line-height: 1.5;
+        line-height: 1.8;
         margin-bottom: 40px;
         &:last-child{
             margin-bottom: 40px;
@@ -132,6 +135,7 @@ article{
             margin-top: 40px;
             li {
                 margin-bottom: 20px;
+                line-height: 1.8;
                 &.disable{
                     color:#999
                 }
@@ -148,6 +152,8 @@ article{
                     margin-bottom: 0px;
                 }
                 div{
+                    vertical-align: top;
+                    line-height: 1.8;
                     display: inline-block;
                     &.name{
                         width: 180px;
