--- a/sass/style.scss
+++ b/sass/style.scss
@@ -100,6 +100,24 @@ header{
     }
 }
 
+#dswd5{
+    header{
+        background-image: url(/images/dswd5/head.jpg);
+        text-align: left;
+        color:#FFF;
+        p{
+            padding-left: 60px;
+            &.logo{
+                padding-top: 177px;
+            }
+        }
+        h1{
+            padding-left: 60px;
+        }
+    }
+}
+
+
 a{
     color: #232584;
     text-decoration: none;
@@ -211,7 +229,7 @@ nav{
             position:relative;
             left:-50%;
             float:left;
-            margin-right: 40px;
+            margin-right: 17px;
             &:last-child{
                 margin-right: 0px;
             }
