--- a/sass/style.scss
+++ b/sass/style.scss
@@ -124,9 +124,9 @@ a{
     &:hover{
         opacity: 0.5
     }
-    &:visited{
-        color:#999;
-    }
+    // &:visited{
+    //     color:#999;
+    // }
     &.highlight{
         color:#E5004F;
     }
