ナビ追加とヘッダー変更

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -104,14 +104,15 @@ header{
     header{
         background-image: url(/images/dswd5/head.jpg);
         text-align: left;
-        color:#FFF;
+        color:#232584;
         p{
             padding-left: 60px;
             &.logo{
-                padding-top: 177px;
+                padding-top: 40px;
             }
         }
         h1{
+            padding-top: 40px;
             padding-left: 60px;
         }
     }
