--- a/sass/style.scss
+++ b/sass/style.scss
@@ -118,6 +118,24 @@ header{
     }
 }
 
+#dswd6{
+    header{
+        background-image: url(/images/dswd6/head.jpg);
+        text-align: left;
+        color:#232584;
+        p{
+            padding-left: 60px;
+            &.logo{
+                padding-top: 40px;
+            }
+        }
+        h1{
+            padding-top: 40px;
+            padding-left: 60px;
+        }
+    }
+}
+
 
 a{
     color: #232584;
