--- a/sass/style.scss
+++ b/sass/style.scss
@@ -136,6 +136,25 @@ header{
     }
 }
 
+#dswd7{
+    header{
+        background-image: url(/images/dswd7/head.jpg);
+        text-align: left;
+        color:#232584;
+        p{
+            padding-left: 60px;
+            &.logo{
+                padding-top: 40px;
+            }
+        }
+        h1{
+            padding-top: 40px;
+            padding-left: 60px;
+        }
+    }
+}
+
+
 
 a{
     color: #232584;
